<resources>
    <!--    SPLASH SCREEN CONSTANTS-->
    <string name="app_name">Covar</string>
    <string name="txt_app_name">COVAR</string>
    <string name="txt_app_motto">Your Personal Assistant!</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_change_password">Change Your Password</string>
    <string name="menu_profile">Change Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="vaccine_splash_logo">Vaccine splash logo</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="signup">Signup</string>
    <string name="domain_name">\@covar.com</string>
    <string name="pwd_updated">Password updated successfully</string>

    <!--validation-->
    <string name="err_invalid_password">Invalid password(Min 8, Max 20. Must contain at least 1 lowercase, 1 uppercase, 1 special character, 1 digit)</string>
    <string name="regex_password"><![CDATA[^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\\S+$).{8,20}$]]></string>


</resources>