<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_baseline_security_24"
            android:title="Change Password" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_adjust_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_west_24"
            android:title="@string/menu_logout" />
    </group>
</menu>